--- a/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj
+++ b/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj
@@ -48,6 +48,7 @@
     <ClCompile Include="DialogTestScene.cpp" />
     <ClCompile Include="DialogueManager.cpp" />
     <ClCompile Include="InitialScene.cpp" />
+    <ClCompile Include="PhysicsBodyComponent.cpp" />
     <ClCompile Include="Room1.cpp" />
     <ClCompile Include="SceneManager.cpp" />
     <ClCompile Include="ScenePuzzleTemplate.cpp" />
@@ -204,6 +205,7 @@
     <ClInclude Include="DialogTestScene.h" />
     <ClInclude Include="DialogueManager.h" />
     <ClInclude Include="InitialScene.h" />
+    <ClInclude Include="PhysicsBodyComponent.h" />
     <ClInclude Include="Room1.h" />
     <ClInclude Include="SceneManager.h" />
     <ClInclude Include="ScenePuzzleTemplate.h" />
