--- a/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj.filters
+++ b/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj.filters
@@ -107,6 +107,9 @@
     <ClCompile Include="EntityFactory.cpp">
       <Filter>Manager</Filter>
     </ClCompile>
+    <ClCompile Include="BooksPuzzleScene.cpp">
+      <Filter>Scene</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL.h">
@@ -558,6 +561,9 @@
     </ClInclude>
     <ClInclude Include="EntityFactory.h">
       <Filter>Manager</Filter>
+    </ClInclude>
+    <ClInclude Include="BooksPuzzleScene.h">
+      <Filter>Scene</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
