--- a/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj
+++ b/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj
@@ -49,6 +49,8 @@
     <ClCompile Include="DialogueManager.cpp" />
     <ClCompile Include="InitialScene.cpp" />
     <ClCompile Include="Module.cpp" />
+    <ClCompile Include="Pipe.cpp" />
+    <ClCompile Include="PipePuzzleScene.cpp" />
     <ClCompile Include="Room1.cpp" />
     <ClCompile Include="SceneManager.cpp" />
     <ClCompile Include="ScenePuzzleTemplate.cpp" />
@@ -206,6 +208,9 @@
     <ClInclude Include="DialogueManager.h" />
     <ClInclude Include="Direction.h" />
     <ClInclude Include="InitialScene.h" />
+    <ClInclude Include="Module.h" />
+    <ClInclude Include="Pipe.h" />
+    <ClInclude Include="PipePuzzleScene.h" />
     <ClInclude Include="Room1.h" />
     <ClInclude Include="SceneManager.h" />
     <ClInclude Include="ScenePuzzleTemplate.h" />
