--- a/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj.filters
+++ b/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj.filters
@@ -1,214 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="..\src\Components\Area2D.cpp" />
-    <ClCompile Include="..\src\Components\CircleArea2D.cpp" />
-    <ClCompile Include="..\src\Components\ClickComponent.cpp" />
-    <ClCompile Include="..\src\Components\DragComponent.cpp" />
-    <ClCompile Include="..\src\Components\Image.cpp" />
-    <ClCompile Include="..\src\Components\LogComponent.cpp" />
-    <ClCompile Include="..\src\Components\MouseIntaractionComponent.cpp" />
-    <ClCompile Include="..\src\Components\RectArea2D.cpp" />
-    <ClCompile Include="..\src\Components\ScrollComponent.cpp" />
-    <ClCompile Include="..\src\Components\TriggerComponent.cpp" />
-    <ClCompile Include="..\src\Components\WriteTextComponent.cpp" />
-    <ClCompile Include="..\src\ecs\Manager.cpp" />
-    <ClCompile Include="..\src\game\Game.cpp" />
-    <ClCompile Include="..\SRC\json\JSON.cpp" />
-    <ClCompile Include="..\SRC\json\JSONValue.cpp" />
-    <ClCompile Include="..\SRC\json\json_demo.cpp" />
-    <ClCompile Include="..\SRC\main.cpp" />
-    <ClCompile Include="..\SRC\sdlutils\SDLNetUtils.cpp" />
-    <ClCompile Include="..\SRC\sdlutils\SDLUtils.cpp" />
-    <ClCompile Include="..\SRC\sdlutils\SDLUtilsError.cpp" />
-    <ClCompile Include="..\SRC\sdlutils\sdlutils_demo.cpp" />
-    <ClCompile Include="..\SRC\sdlutils\SoundEffect.cpp" />
-    <ClCompile Include="..\SRC\sdlutils\Texture.cpp" />
-    <ClCompile Include="..\SRC\utils\Collisions.cpp" />
-    <ClCompile Include="..\SRC\utils\Vector2D.cpp" />
-    <ClCompile Include="BooksPuzzleScene.cpp" />
-    <ClCompile Include="Area2DLayerManager.cpp" />
-    <ClCompile Include="DebugLogRoom.cpp" />
-    <ClCompile Include="ClockPuzzleScene.cpp" />
-    <ClCompile Include="DialogTestScene.cpp" />
-    <ClCompile Include="DialogueManager.cpp" />
-    <ClCompile Include="EntityFactory.cpp" />
-    <ClCompile Include="InitialScene.cpp" />
-    <ClCompile Include="Module.cpp" />
-    <ClCompile Include="Pipe.cpp" />
-    <ClCompile Include="PipePuzzleScene.cpp" />
-    <ClCompile Include="PhysicsBodyComponent.cpp" />
-    <ClCompile Include="Room1.cpp" />
-    <ClCompile Include="SceneManager.cpp" />
-    <ClCompile Include="ScenePuzzleTemplate.cpp" />
-    <ClCompile Include="SceneRoomTemplate.cpp" />
-    <ClCompile Include="SceneTemplate.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="..\lib\OpenAL 1.1 SDK\include\al.h" />
-    <ClInclude Include="..\lib\OpenAL 1.1 SDK\include\alc.h" />
-    <ClInclude Include="..\lib\OpenAL 1.1 SDK\include\efx-creative.h" />
-    <ClInclude Include="..\lib\OpenAL 1.1 SDK\include\EFX-Util.h" />
-    <ClInclude Include="..\lib\OpenAL 1.1 SDK\include\efx.h" />
-    <ClInclude Include="..\lib\OpenAL 1.1 SDK\include\xram.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\begin_code.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\close_code.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_assert.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_atomic.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_audio.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_bits.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_blendmode.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_clipboard.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_config.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_config_android.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_config_emscripten.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_config_iphoneos.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_config_macosx.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_config_minimal.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_config_ngage.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_config_os2.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_config_pandora.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_config_windows.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_config_wingdk.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_config_winrt.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_config_xbox.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_copying.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_cpuinfo.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_egl.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_endian.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_error.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_events.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_filesystem.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_gamecontroller.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_gesture.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_guid.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_haptic.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_hidapi.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_hints.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_joystick.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_keyboard.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_keycode.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_loadso.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_locale.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_log.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_main.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_messagebox.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_metal.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_misc.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_mouse.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_mutex.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_name.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_opengl.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_opengles.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_opengles2.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_opengles2_gl2.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_opengles2_gl2ext.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_opengles2_gl2platform.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_opengles2_khrplatform.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_opengl_glext.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_pixels.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_platform.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_power.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_quit.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_rect.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_render.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_revision.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_rwops.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_scancode.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_sensor.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_shape.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_stdinc.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_surface.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_system.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_syswm.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_test.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_test_assert.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_test_common.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_test_compare.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_test_crc32.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_test_font.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_test_fuzzer.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_test_harness.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_test_images.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_test_log.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_test_md5.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_test_memory.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_test_random.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_thread.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_timer.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_touch.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_types.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_version.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_video.h" />
-    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_vulkan.h" />
-    <ClInclude Include="..\lib\SDL2_image-2.8.4\include\SDL_image.h" />
-    <ClInclude Include="..\lib\SDL2_mixer-2.8.0\include\SDL_mixer.h" />
-    <ClInclude Include="..\lib\SDL2_net-2.2.0\include\SDL_net.h" />
-    <ClInclude Include="..\lib\SDL2_ttf-2.24.0\include\SDL_ttf.h" />
-    <ClInclude Include="..\src\Components\Area2D.h" />
-    <ClInclude Include="..\src\Components\CircleArea2D.h" />
-    <ClInclude Include="..\src\Components\ClickComponent.h" />
-    <ClInclude Include="..\src\Components\DragComponent.h" />
-    <ClInclude Include="..\src\Components\Image.h" />
-    <ClInclude Include="..\src\Components\LogComponent.h" />
-    <ClInclude Include="..\src\Components\MouseIntaractionComponent.h" />
-    <ClInclude Include="..\src\Components\RectArea2D.h" />
-    <ClInclude Include="..\src\Components\ScrollComponent.h" />
-    <ClInclude Include="..\src\Components\Transform.h" />
-    <ClInclude Include="..\src\Components\TriggerComponent.h" />
-    <ClInclude Include="..\src\Components\WriteTextComponent.h" />
-    <ClInclude Include="..\src\ecs\Component.h" />
-    <ClInclude Include="..\src\ecs\ecs.h" />
-    <ClInclude Include="..\src\ecs\ecs_defs_example.h" />
-    <ClInclude Include="..\src\ecs\Entity.h" />
-    <ClInclude Include="..\src\ecs\Manager.h" />
-    <ClInclude Include="..\src\game\ecs_defs.h" />
-    <ClInclude Include="..\src\game\Game.h" />
-    <ClInclude Include="..\SRC\json\JSON.h" />
-    <ClInclude Include="..\src\json\json.hpp" />
-    <ClInclude Include="..\SRC\json\JSONValue.h" />
-    <ClInclude Include="..\SRC\json\json_demo.h" />
-    <ClInclude Include="..\SRC\sdlutils\Font.h" />
-    <ClInclude Include="..\SRC\sdlutils\InputHandler.h" />
-    <ClInclude Include="..\SRC\sdlutils\macros.h" />
-    <ClInclude Include="..\SRC\sdlutils\Music.h" />
-    <ClInclude Include="..\SRC\sdlutils\RandomNumberGenerator.h" />
-    <ClInclude Include="..\SRC\sdlutils\SDLNetUtils.h" />
-    <ClInclude Include="..\SRC\sdlutils\SDLUtils.h" />
-    <ClInclude Include="..\SRC\sdlutils\SDLUtilsError.h" />
-    <ClInclude Include="..\SRC\sdlutils\sdlutils_demo.h" />
-    <ClInclude Include="..\SRC\sdlutils\SoundEffect.h" />
-    <ClInclude Include="..\SRC\sdlutils\Texture.h" />
-    <ClInclude Include="..\SRC\sdlutils\VirtualTimer.h" />
-    <ClInclude Include="..\SRC\utils\Collisions.h" />
-    <ClInclude Include="..\SRC\utils\DynamicBitSet.h" />
-    <ClInclude Include="..\SRC\utils\GenID.h" />
-    <ClInclude Include="..\SRC\utils\mpl.h" />
-    <ClInclude Include="..\SRC\utils\ptr_iterator.h" />
-    <ClInclude Include="..\SRC\utils\Singleton.h" />
-    <ClInclude Include="..\SRC\utils\Vector2D.h" />
-    <ClInclude Include="BooksPuzzleScene.h" />
-    <ClInclude Include="Area2DLayerManager.h" />
-    <ClInclude Include="DebugLogRoom.h" />
-    <ClInclude Include="checkML.h" />
-    <ClInclude Include="ClockPuzzleScene.h" />
-    <ClInclude Include="DialogTestScene.h" />
-    <ClInclude Include="DialogueManager.h" />
-    <ClInclude Include="Direction.h" />
-    <ClInclude Include="EntityFactory.h" />
-    <ClInclude Include="InitialScene.h" />
-    <ClInclude Include="Module.h" />
-    <ClInclude Include="Pipe.h" />
-    <ClInclude Include="PipePuzzleScene.h" />
-    <ClInclude Include="PhysicsBodyComponent.h" />
-    <ClInclude Include="Room1.h" />
-    <ClInclude Include="SceneManager.h" />
-    <ClInclude Include="ScenePuzzleTemplate.h" />
-    <ClInclude Include="SceneRoomTemplate.h" />
-    <ClInclude Include="SceneTemplate.h" />
-    <ClInclude Include="TextInfo.h" />
-    <ClInclude Include="EventsInfo.h" />
     <ClCompile Include="..\SRC\sdlutils\SDLNetUtils.cpp">
       <Filter>SDL</Filter>
     </ClCompile>
@@ -311,16 +103,26 @@
     <ClCompile Include="..\src\Components\RectArea2D.cpp">
       <Filter>Component</Filter>
     </ClCompile>
-    <ClCompile Include="Hint.cpp" />
-    <ClCompile Include="Inventory.cpp" />
+    <ClCompile Include="DialogueManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Module.cpp" />
+    <ClCompile Include="PipePuzzleScene.cpp">
+      <Filter>Scene</Filter>
+    </ClCompile>
+    <ClCompile Include="Pipe.cpp">
+      <Filter>Misc</Filter>
+    <ClCompile Include="a.cpp" />
+    <ClCompile Include="EntityFactory.cpp">
+      <Filter>Manager</Filter>
+    </ClCompile>
+    <ClCompile Include="BooksPuzzleScene.cpp">
+      <Filter>Scene</Filter>
     <ClCompile Include="Area2DLayerManager.cpp">
       <Filter>Manager</Filter>
     </ClCompile>
     <ClCompile Include="..\src\Components\Area2D.cpp">
       <Filter>Component</Filter>
-    </ClCompile>
-    <ClCompile Include="DebugInventoryScene.cpp">
-      <Filter>Scene</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -771,22 +573,66 @@
     <ClInclude Include="..\SRC\utils\GenID.h">
       <Filter>SDL</Filter>
     </ClInclude>
-    <ClInclude Include="Hint.h" />
-    <ClInclude Include="Inventory.h" />
+    <ClInclude Include="..\src\json\json.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="DialogueManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Direction.h" />
+    <ClInclude Include="EntityFactory.h">
+      <Filter>Manager</Filter>
+    </ClInclude>
+    <ClInclude Include="BooksPuzzleScene.h">
+      <Filter>Scene</Filter>
+    </ClInclude>
     <ClInclude Include="..\lib\OpenAL 1.1 SDK\include\al.h" />
     <ClInclude Include="..\lib\OpenAL 1.1 SDK\include\alc.h" />
     <ClInclude Include="..\lib\OpenAL 1.1 SDK\include\efx-creative.h" />
     <ClInclude Include="..\lib\OpenAL 1.1 SDK\include\EFX-Util.h" />
     <ClInclude Include="..\lib\OpenAL 1.1 SDK\include\efx.h" />
     <ClInclude Include="..\lib\OpenAL 1.1 SDK\include\xram.h" />
+    <ClInclude Include="PipePuzzleScene.h">
+      <Filter>Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="Module.h">
+      <Filter>Misc</Filter>
+    </ClInclude>
+    <ClInclude Include="Pipe.h">
+      <Filter>Misc</Filter>
     <ClInclude Include="Area2DLayerManager.h">
       <Filter>Manager</Filter>
     </ClInclude>
-    <ClInclude Include="DebugInventoryScene.h">
-      <Filter>Scene</Filter>
-    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\src\ecs\RAEDME.md" />
+    <Filter Include="SDL">
+      <UniqueIdentifier>{9be62feb-6d92-407a-99d9-c6040b133c14}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Scene">
+      <UniqueIdentifier>{fe0d94f8-78a3-4b29-a9ac-960a6f37d28a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Component">
+      <UniqueIdentifier>{de24d429-2ac3-4d43-9d5f-b98cc1c7a442}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Misc">
+      <UniqueIdentifier>{f95905cc-5ac0-4c25-824b-fde7a97c99a0}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Component\ecs">
+      <UniqueIdentifier>{34acd58a-1b1a-4410-8704-64b36605806c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Game">
+      <UniqueIdentifier>{5bc45aa1-d9d8-4586-8ad0-ec8c0c95e487}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ecs">
+      <UniqueIdentifier>{8326cf4b-a758-4816-bfaa-990037c38b3b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Manager">
+      <UniqueIdentifier>{394ba389-94ba-413c-baed-06dda6b00686}</UniqueIdentifier>
+    </Filter>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\src\ecs\RAEDME.md">
+      <Filter>Misc</Filter>
+    </None>
   </ItemGroup>
 </Project>
