Ver inventario y guardar cosas visualmente

--- a/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj
+++ b/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj
@@ -44,15 +44,20 @@
     <ClCompile Include="..\SRC\sdlutils\Texture.cpp" />
     <ClCompile Include="..\SRC\utils\Collisions.cpp" />
     <ClCompile Include="..\SRC\utils\Vector2D.cpp" />
+    <ClCompile Include="AnimatorComponent.cpp" />
     <ClCompile Include="BooksPuzzleScene.cpp" />
     <ClCompile Include="Area2DLayerManager.cpp" />
+    <ClCompile Include="DebugInventoryScene.cpp" />
     <ClCompile Include="DebugLogRoom.cpp" />
     <ClCompile Include="ClockPuzzleScene.cpp" />
     <ClCompile Include="DialogTestScene.cpp" />
     <ClCompile Include="DialogueManager.cpp" />
     <ClCompile Include="EntityFactory.cpp" />
+    <ClCompile Include="Hint.cpp" />
     <ClCompile Include="InitialScene.cpp" />
+    <ClCompile Include="Inventory.cpp" />
     <ClCompile Include="Module.cpp" />
+    <ClCompile Include="PhysicsBodyComponent.cpp" />
     <ClCompile Include="Pipe.cpp" />
     <ClCompile Include="PipePuzzleScene.cpp" />
     <ClCompile Include="Room1.cpp" />
@@ -205,8 +210,10 @@
     <ClInclude Include="..\SRC\utils\ptr_iterator.h" />
     <ClInclude Include="..\SRC\utils\Singleton.h" />
     <ClInclude Include="..\SRC\utils\Vector2D.h" />
+    <ClInclude Include="AnimatorComponent.h" />
     <ClInclude Include="BooksPuzzleScene.h" />
     <ClInclude Include="Area2DLayerManager.h" />
+    <ClInclude Include="DebugInventoryScene.h" />
     <ClInclude Include="DebugLogRoom.h" />
     <ClInclude Include="checkML.h" />
     <ClInclude Include="ClockPuzzleScene.h" />
@@ -214,8 +221,12 @@
     <ClInclude Include="DialogueManager.h" />
     <ClInclude Include="Direction.h" />
     <ClInclude Include="EntityFactory.h" />
+    <ClInclude Include="EventsInfo.h" />
+    <ClInclude Include="Hint.h" />
     <ClInclude Include="InitialScene.h" />
+    <ClInclude Include="Inventory.h" />
     <ClInclude Include="Module.h" />
+    <ClInclude Include="PhysicsBodyComponent.h" />
     <ClInclude Include="Pipe.h" />
     <ClInclude Include="PipePuzzleScene.h" />
     <ClInclude Include="Room1.h" />
