los archivos de audio se leen del json y cargan bien

--- a/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj
+++ b/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj
@@ -229,6 +229,7 @@
     <ClInclude Include="ScenePuzzleTemplate.h" />
     <ClInclude Include="SceneRoomTemplate.h" />
     <ClInclude Include="SceneTemplate.h" />
+    <ClInclude Include="Sound.h" />
     <ClInclude Include="TextInfo.h" />
   </ItemGroup>
   <ItemGroup>
