--- a/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj.filters
+++ b/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj.filters
@@ -50,6 +50,7 @@
     <ClCompile Include="DebugInventoryScene.cpp" />
     <ClCompile Include="Hint.cpp" />
     <ClCompile Include="Inventory.cpp" />
+    <ClCompile Include="DataManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\lib\OpenAL 1.1 SDK\include\al.h" />
@@ -222,6 +223,7 @@
     <ClInclude Include="DebugInventoryScene.h" />
     <ClInclude Include="Hint.h" />
     <ClInclude Include="Inventory.h" />
+    <ClInclude Include="DataManager.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\src\ecs\RAEDME.md" />
