refactorizando log en escena

--- a/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj
+++ b/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj
@@ -58,6 +58,7 @@
     <ClCompile Include="Hint.cpp" />
     <ClCompile Include="InitialScene.cpp" />
     <ClCompile Include="Inventory.cpp" />
+    <ClCompile Include="MiddleRoomLogDebug.cpp" />
     <ClCompile Include="MiddleRoomScene.cpp" />
     <ClCompile Include="Module.cpp" />
     <ClCompile Include="Pipe.cpp" />
@@ -230,6 +231,7 @@
     <ClInclude Include="Hint.h" />
     <ClInclude Include="InitialScene.h" />
     <ClInclude Include="Inventory.h" />
+    <ClInclude Include="MiddleRoomLogDebug.h" />
     <ClInclude Include="MiddleRoomScene.h" />
     <ClInclude Include="Module.h" />
     <ClInclude Include="Pipe.h" />
