--- a/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj.filters
+++ b/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj.filters
@@ -52,6 +52,7 @@
     <ClCompile Include="Inventory.cpp" />
     <ClCompile Include="MiddleRoomScene.cpp" />
     <ClCompile Include="MiddleRoomLogDebug.cpp" />
+    <ClCompile Include="Log.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\lib\OpenAL 1.1 SDK\include\al.h" />
@@ -226,6 +227,7 @@
     <ClInclude Include="Inventory.h" />
     <ClInclude Include="MiddleRoomScene.h" />
     <ClInclude Include="MiddleRoomLogDebug.h" />
+    <ClInclude Include="Log.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\src\ecs\RAEDME.md" />
