--- a/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj.filters
+++ b/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj.filters
@@ -52,6 +52,7 @@
     <ClCompile Include="Inventory.cpp" />
     <ClCompile Include="DataManager.cpp" />
     <ClCompile Include="MiddleRoomScene.cpp" />
+    <ClCompile Include="ReadDialog.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\lib\OpenAL 1.1 SDK\include\al.h" />
@@ -226,6 +227,7 @@
     <ClInclude Include="Inventory.h" />
     <ClInclude Include="DataManager.h" />
     <ClInclude Include="MiddleRoomScene.h" />
+    <ClInclude Include="ReadDialog.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\src\ecs\RAEDME.md" />
