archivo pruebas guardar unordermap my beloved
la recogidsa de datos esta falta implementarla en todo

--- a/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj
+++ b/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj
@@ -49,6 +49,7 @@
     <ClCompile Include="BooksPuzzleScene.cpp" />
     <ClCompile Include="Area2DLayerManager.cpp" />
     <ClCompile Include="CalendearMobileTestScene.cpp" />
+    <ClCompile Include="CSVdataRecolector.cpp" />
     <ClCompile Include="DataManager.cpp" />
     <ClCompile Include="DebugInventoryScene.cpp" />
     <ClCompile Include="DebugLogRoom.cpp" />
@@ -221,6 +222,7 @@
     <ClInclude Include="BooksPuzzleScene.h" />
     <ClInclude Include="Area2DLayerManager.h" />
     <ClInclude Include="CalendearMobileTestScene.h" />
+    <ClInclude Include="CSVdataRecolector.h" />
     <ClInclude Include="DataManager.h" />
     <ClInclude Include="DebugInventoryScene.h" />
     <ClInclude Include="DebugLogRoom.h" />
