--- a/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj
+++ b/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj
@@ -226,6 +226,7 @@
     <ClInclude Include="DataManager.h" />
     <ClInclude Include="DebugInventoryScene.h" />
     <ClInclude Include="ClockPuzzleScene.h" />
+    <ClInclude Include="DescriptionInfo.h" />
     <ClInclude Include="DialogTestScene.h" />
     <ClInclude Include="DialogueManager.h" />
     <ClInclude Include="Direction.h" />
