--- a/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj
+++ b/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj
@@ -62,6 +62,7 @@
     <ClCompile Include="Log.cpp" />
     <ClCompile Include="MiddleRoomScene.cpp" />
     <ClCompile Include="Module.cpp" />
+    <ClCompile Include="MusicPuzzleScene.cpp" />
     <ClCompile Include="Pipe.cpp" />
     <ClCompile Include="PipePuzzleScene.cpp" />
     <ClCompile Include="PhysicsBodyComponent.cpp" />
@@ -238,6 +239,7 @@
     <ClInclude Include="Log.h" />
     <ClInclude Include="MiddleRoomScene.h" />
     <ClInclude Include="Module.h" />
+    <ClInclude Include="MusicPuzzleScene.h" />
     <ClInclude Include="Pipe.h" />
     <ClInclude Include="PipePuzzleScene.h" />
     <ClInclude Include="PhysicsBodyComponent.h" />
