--- a/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj.filters
+++ b/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj.filters
@@ -59,6 +59,7 @@
     <ClCompile Include="TiledAreaComponent.cpp" />
     <ClCompile Include="MusicPuzzleScene.cpp" />
     <ClCompile Include="TutorialScene.cpp" />
+    <ClCompile Include="GameSave.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\lib\OpenAL 1.1 SDK\include\al.h" />
@@ -241,6 +242,7 @@
     <ClInclude Include="DescriptionInfo.h" />
     <ClInclude Include="MusicPuzzleScene.h" />
     <ClInclude Include="TutorialScene.h" />
+    <ClInclude Include="GameSave.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\src\ecs\RAEDME.md" />
