--- a/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj.filters
+++ b/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj.filters
@@ -57,6 +57,8 @@
     <ClCompile Include="MosaicPuzzleScene.cpp" />
     <ClCompile Include="DragPuzzleScene.cpp" />
     <ClCompile Include="TiledAreaComponent.cpp" />
+    <ClCompile Include="MusicPuzzleScene.cpp" />
+    <ClCompile Include="XOPuzzleScene.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\lib\OpenAL 1.1 SDK\include\al.h" />
@@ -237,6 +239,8 @@
     <ClInclude Include="DragPuzzleScene.h" />
     <ClInclude Include="TiledAreaComponent.h" />
     <ClInclude Include="DescriptionInfo.h" />
+    <ClInclude Include="MusicPuzzleScene.h" />
+    <ClInclude Include="XOPuzzleScene.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\src\ecs\RAEDME.md" />
