--- a/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj
+++ b/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj
@@ -65,6 +65,7 @@
     <ClCompile Include="Module.cpp" />
     <ClCompile Include="MusicPuzzleScene.cpp" />
     <ClCompile Include="MosaicPuzzleScene.cpp" />
+    <ClCompile Include="Path.cpp" />
     <ClCompile Include="Pipe.cpp" />
     <ClCompile Include="PipePuzzleScene.cpp" />
     <ClCompile Include="PhysicsBodyComponent.cpp" />
@@ -245,6 +246,7 @@
     <ClInclude Include="Module.h" />
     <ClInclude Include="MusicPuzzleScene.h" />
     <ClInclude Include="MosaicPuzzleScene.h" />
+    <ClInclude Include="Path.h" />
     <ClInclude Include="Pipe.h" />
     <ClInclude Include="PipePuzzleScene.h" />
     <ClInclude Include="PhysicsBodyComponent.h" />
