--- a/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj.filters
+++ b/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj.filters
@@ -60,6 +60,8 @@
     <ClCompile Include="TiledAreaComponent.cpp" />
     <ClCompile Include="MusicPuzzleScene.cpp" />
     <ClCompile Include="XOPuzzleScene.cpp" />
+    <ClCompile Include="Room2.cpp" />
+    <ClCompile Include="RavenPuzzleScene.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\lib\OpenAL 1.1 SDK\include\al.h" />
@@ -243,6 +245,8 @@
     <ClInclude Include="DescriptionInfo.h" />
     <ClInclude Include="MusicPuzzleScene.h" />
     <ClInclude Include="XOPuzzleScene.h" />
+    <ClInclude Include="Room2.h" />
+    <ClInclude Include="RavenPuzzleScene.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\src\ecs\RAEDME.md" />
