--- a/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj.filters
+++ b/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj.filters
@@ -62,6 +62,8 @@
     <ClCompile Include="XOPuzzleScene.cpp" />
     <ClCompile Include="Room2.cpp" />
     <ClCompile Include="RavenPuzzleScene.cpp" />
+    <ClCompile Include="DoorPuzzleScene.cpp" />
+    <ClCompile Include="WindowPuzzleScene.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\lib\OpenAL 1.1 SDK\include\al.h" />
@@ -247,6 +249,8 @@
     <ClInclude Include="XOPuzzleScene.h" />
     <ClInclude Include="Room2.h" />
     <ClInclude Include="RavenPuzzleScene.h" />
+    <ClInclude Include="DoorPuzzleScene.h" />
+    <ClInclude Include="WindowPuzzleScene.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\src\ecs\RAEDME.md" />
