--- a/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj
+++ b/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\Components\Area2D.cpp" />
+    <ClCompile Include="..\src\Components\BehaviorStateComponent.cpp" />
     <ClCompile Include="..\src\Components\CircleArea2D.cpp" />
     <ClCompile Include="..\src\Components\ClickableSpriteComponent.cpp" />
     <ClCompile Include="..\src\Components\ClickComponent.cpp" />
@@ -189,6 +190,7 @@
     <ClInclude Include="..\lib\SDL2_net-2.2.0\include\SDL_net.h" />
     <ClInclude Include="..\lib\SDL2_ttf-2.24.0\include\SDL_ttf.h" />
     <ClInclude Include="..\src\Components\Area2D.h" />
+    <ClInclude Include="..\src\Components\BehaviorStateComponent.h" />
     <ClInclude Include="..\src\Components\CircleArea2D.h" />
     <ClInclude Include="..\src\Components\ClickableSpriteComponent.h" />
     <ClInclude Include="..\src\Components\ClickComponent.h" />
