sala 3 auxiliar, parte de puzzle balanza

--- a/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj.filters
+++ b/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj.filters
@@ -68,6 +68,8 @@
     <ClCompile Include="DoorPuzzleScene.cpp" />
     <ClCompile Include="WindowPuzzleScene.cpp" />
     <ClCompile Include="..\src\Components\BehaviorStateComponent.cpp" />
+    <ClCompile Include="BalancePuzzleScene.cpp" />
+    <ClCompile Include="roomprueba.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\lib\OpenAL 1.1 SDK\include\al.h" />
@@ -259,6 +261,8 @@
     <ClInclude Include="DoorPuzzleScene.h" />
     <ClInclude Include="WindowPuzzleScene.h" />
     <ClInclude Include="..\src\Components\BehaviorStateComponent.h" />
+    <ClInclude Include="BalancePuzzleScene.h" />
+    <ClInclude Include="roomprueba.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\src\ecs\RAEDME.md" />
