--- a/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj.filters
+++ b/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj.filters
@@ -68,6 +68,7 @@
     <ClCompile Include="DoorPuzzleScene.cpp" />
     <ClCompile Include="WindowPuzzleScene.cpp" />
     <ClCompile Include="..\src\Components\BehaviorStateComponent.cpp" />
+    <ClCompile Include="WiresPuzzleScene.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\lib\OpenAL 1.1 SDK\include\al.h" />
@@ -259,6 +260,7 @@
     <ClInclude Include="DoorPuzzleScene.h" />
     <ClInclude Include="WindowPuzzleScene.h" />
     <ClInclude Include="..\src\Components\BehaviorStateComponent.h" />
+    <ClInclude Include="WiresPuzzleScene.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\src\ecs\RAEDME.md" />
